# practical-rust

.kiro/specs/rust-learning-path/: design.md  requirements.md  tasks.md
rust-learning-path/: COMMUNITY_RESOURCES.md  CONCEPTS.md  CONCEPT_SEARCH_README.md  README.md  build_concept_index.py  concept_index.json  concept_search.html  concept_search.py  index.md
rust-learning-path/advanced/: index.md
rust-learning-path/advanced/c-library-binding/: CONCEPTS.md  Cargo.toml  README.md  STEP_BY_STEP.md  build.rs
rust-learning-path/advanced/c-library-binding/c-lib/: Makefile  mathlib.c  mathlib.h  test_mathlib.c
rust-learning-path/advanced/c-library-binding/src/: lib.rs  (+1 more)
rust-learning-path/advanced/capstone-project/: CONCEPTS.md  Cargo.toml  README.md  build.rs
rust-learning-path/advanced/capstone-project/c-lib/: task_ops.c  task_ops.h
rust-learning-path/advanced/capstone-project/examples/: basic_usage.rs
rust-learning-path/advanced/capstone-project/src/: error.rs  lib.rs
rust-learning-path/advanced/capstone-project/src/dsl/: config.rs  macros.rs  mod.rs
rust-learning-path/advanced/capstone-project/src/engine/: mod.rs  scheduler.rs  task_queue.rs  thread_pool.rs
rust-learning-path/advanced/capstone-project/src/ffi/: bindings.rs  mod.rs  native_ops.rs
rust-learning-path/advanced/capstone-project/src/memory/: allocator.rs  mod.rs  pool.rs
rust-learning-path/advanced/capstone-project/src/traits/: executor.rs  mod.rs  resource.rs
rust-learning-path/advanced/capstone-project/tests/: integration_tests.rs
rust-learning-path/advanced/custom-memory-allocator/: CONCEPTS.md  Cargo.toml  README.md
rust-learning-path/advanced/dsl-project/: CONCEPTS.md  Cargo.toml  README.md  STEP_BY_STEP.md  VALIDATION.md
rust-learning-path/advanced/dsl-project/examples/: basic_config.rs  nested_config.rs  validation_example.rs
rust-learning-path/advanced/dsl-project/src/: lib.rs
rust-learning-path/advanced/dsl-project/tests/: integration_tests.rs
rust-learning-path/advanced/module1/: index.md
rust-learning-path/advanced/thread-pool/: CONCEPTS.md  Cargo.toml  README.md  VALIDATION.md
rust-learning-path/basic/: index.md
rust-learning-path/basic/module1/: index.md  rust_basics.md
rust-learning-path/basic/module1/file-explorer/: CONCEPTS.md  Cargo.toml  README.md
rust-learning-path/basic/module1/file-explorer/src/: main.rs
rust-learning-path/basic/module1/file-explorer/tests/: integration_tests.rs
rust-learning-path/basic/module2/: index.md
rust-learning-path/basic/module3/: index.md
rust-learning-path/basic/module4/: index.md
rust-learning-path/expert/: index.md
rust-learning-path/expert/async-network-server/: CONCEPTS.md  Cargo.toml  README.md  validate.md
rust-learning-path/expert/async-network-server/benches/: server_benchmark.rs
rust-learning-path/expert/async-network-server/src/: connection.rs  error.rs  handler.rs  lib.rs  main.rs  server.rs
rust-learning-path/expert/async-network-server/tests/: integration_tests.rs  load_tests.rs
rust-learning-path/expert/capstone-distributed-analysis/: Cargo.toml  README.md
rust-learning-path/expert/capstone-distributed-analysis/coordinator/: Cargo.toml
rust-learning-path/expert/capstone-distributed-analysis/coordinator/src/: config.rs  main.rs
rust-learning-path/expert/capstone-distributed-analysis/shared/: Cargo.toml
rust-learning-path/expert/capstone-distributed-analysis/shared/src/: lib.rs  protocol.rs  types.rs  utils.rs
rust-learning-path/expert/capstone-distributed-analysis/tests/: integration_tests.rs
rust-learning-path/expert/compiler-plugin/: .gitignore  CONCEPTS.md  Cargo.toml  README.md  build.rs  validate.py
rust-learning-path/expert/compiler-plugin/examples/: usage.rs
rust-learning-path/expert/compiler-plugin/src/: diagnostics.rs  lib.rs  lint.rs
rust-learning-path/expert/compiler-plugin/tests/: integration_tests.rs
rust-learning-path/expert/compiler-plugin/tests/test_cases/: bad_code.rs  good_code.rs
rust-learning-path/expert/custom-runtime/: CONCEPTS.md  Cargo.toml  README.md  verify.md
rust-learning-path/expert/high-performance-data-processing/: CONCEPTS.md  Cargo.toml  README.md
rust-learning-path/expert/high-performance-data-processing/benches/: processor_bench.rs
rust-learning-path/expert/high-performance-data-processing/data/: sample_small.csv
rust-learning-path/expert/high-performance-data-processing/src/: lib.rs  main.rs  memory_map.rs  parallel.rs  processor.rs  simd_ops.rs
rust-learning-path/expert/high-performance-data-processing/tests/: integration_tests.rs  performance_tests.rs
rust-learning-path/expert/module1/: CONCEPTS.md  index.md
rust-learning-path/expert/module1/async-server/: Cargo.toml  README.md
rust-learning-path/expert/module1/async-server/src/: config.rs  lib.rs  main.rs
rust-learning-path/expert/module1/async-server/src/balancer/: mod.rs  server.rs  strategy.rs
rust-learning-path/expert/module1/async-server/src/chat/: mod.rs  room.rs  server.rs
rust-learning-path/expert/module1/async-server/src/echo/: mod.rs  server.rs
rust-learning-path/expert/module1/async-server/src/http/: handler.rs  middleware.rs  mod.rs  server.rs
rust-learning-path/expert/module1/examples/: Cargo.toml  README.md
rust-learning-path/expert/module1/examples/src/: async_await.rs  basic_futures.rs  cancellation.rs  main.rs  performance.rs  pinning.rs  runtimes.rs  streams.rs  structured_concurrency.rs  task_scheduling.rs
rust-learning-path/expert/module1/examples/tests/: async_tests.rs
rust-learning-path/templates/: CONCEPTS.md.template  Cargo.toml.template  README.md.template
rust-learning-path/test_framework/: Cargo.toml  PROJECT_VALIDATION_README.md  QUIZ_README.md  README.md  advanced_tests.rs  basic_tests.rs  demo_quiz_system.py  expert_tests.rs  feedback_system.rs  framework.rs  integration_test.sh  integration_test_quiz.py  intermediate_tests.rs  lib.rs  main.rs  project_validation_runner.rs  project_validation_tests.rs  project_validator.rs  project_validator_cli.rs  quiz_framework.rs  quiz_runner.rs  run_tests.py  validate_quiz_system.py
(+62 files in other folders)
