[package]
name = "high-performance-data-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7"           # Parallel processing
memmap2 = "0.9"         # Memory-mapped files
csv = "1.3"             # CSV parsing
serde = { version = "1.0", features = ["derive"] }
bytemuck = "1.14"       # Safe transmutation
wide = "0.7"            # SIMD operations
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"          # Error handling

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "processor_bench"
harness = false

[profile.release]
lto = true              # Link-time optimization
codegen-units = 1       # Single codegen unit for better optimization
panic = "abort"         # Smaller binary size