[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
shared = { path = "../shared" }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Additional dependencies
tokio-tungstenite = { workspace = true }
crossbeam = { workspace = true }